--- a/screensage-work.html
+++ b/screensage-work.html
@@ -2,6 +2,11 @@
 <html lang="en" class="scroll-smooth"><head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ScreenSage - Omesh Kandregula</title>
+
+<!-- Favicon -->
+<link rel="icon" type="image/jpeg" href="/assets/images/omesh.jpg">
+<link rel="apple-touch-icon" href="/assets/images/omesh.jpg">
+
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
