--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ color: #a1a1aa !important;
                                     <h4 class="text-sm font-medium text-zinc-300 group-hover:text-white transition-colors">Synthara AG</h4>
                                 </div>
                                 <div class="flex items-baseline justify-between w-full">
-                                    <p class="text-xs text-zinc-500 group-hover:text-zinc-400 transition-colors">Market Research Intern</p>
+                                    <p class="text-xs text-zinc-500 group-hover:text-zinc-400 transition-colors">Market Intelligence Research Intern</p>
                                     <p class="text-[10px] text-zinc-600 font-mono">2020</p>
                                 </div>
                             </button>
